--- a/index.html
+++ b/index.html
@@ -19,9 +19,37 @@
     <link rel="stylesheet" href="nav.css">
     <script src="script.js"></script>
 </head>
-
+<style> 
+html, body {
+      width: 100%;
+      height: 100%;}
+  #landing {
+      display: table;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(
+        rgba(0,0,0,0.9),
+        rgba(0,0,0,0.1)
+      ),
+        url('img/balloon-1.jpg') no-repeat center;
+      background-size: cover;
+    }
+    .pizza{
+        font-family:Times, serif;
+        color:white;
+    }
+</style>
 <body>
-
+    <header id="landing">
+    <div class="text-vertical-center" id="pizza">
+      <h1 >Skydance Hot Air Balloon Rides</h1>
+      <h2>Ride with the wind. Dance with the sky.</h2>
+      <h1><font color="red">YOU LEFT YOUR C9 OPEN: WEI ZHENG. YOU NEED TO USE INCOGNITO: JENNIFER. CHECK YOUR CSS: JOHNSON. </font></H1>
+    </div> 
+ <div>
+     
+ </div>
+            
 </body>
 
 </html>
