--- a/index.html
+++ b/index.html
@@ -85,6 +85,24 @@ Due to climatic conditions, we can safely fly only in the early morning hours wi
       
     </div>
    </div>
+    <div class="container " id="welcome">
+   <div class="jumbotron">
+       my area
+        </div>
+   </div>
+     <div class="container " id="welcome">
+   <div class="jumbotron">
+      This is your area edit anyting you want and even remove this its just to show you the outline
+        </div>
+   </div>  <div class="container " id="welcome">
+   <div class="jumbotron">
+        This is your area edit anyting you want and even remove this its just to show you the outline
+        </div>
+   </div>  <div class="container " id="welcome">
+   <div class="jumbotron">
+       This is your area edit anyting you want and even remove this its just to show you the outline
+        </div>
+   </div>
 </body>
 
 </html>
