--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
     #contact{
          padding-top: 25px;
     }
+    #test-image{
+      background: linear-gradient( rgba(0, 0, 0, 0.9),
+        rgba(0, 0, 0, 0.1)),
+        url('img/balloon-6.jpg') repeat center;
+        
+    }
 </style>
 
 <body>
@@ -145,10 +151,10 @@
 
 
 
-    <div class="container " id="welcome">
+    <div class="container " id="testimonials">
         <div class="jumbotron">
             <h2>Testimonials: Just a few of our happy customers </h2> <br>
-            <p id="testimonials">
+            <p >
             <br> "Thank you for a wonderful memory. I was smiling the entire time. We shall always cherish that morning!" -- Joan H.<br>
             <br>
              "I haven't come down to earth since our balloon ride. We are so pleased that we chose SHABR." -- Marsha N.<br>
@@ -157,6 +163,14 @@
                 <br> "Thank you so much for the experience. It was delightful - awesome - wonderful - I will never forget my 80th Birthday!" -- Ethel E.<br>
                 <br> "What an awesome way to remember my anniversary! I know I will always remember this experience. Thank you again!" -- Mary C. <br>
             </p>
+            
+        <p id ="test-image"> 
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        </p>
         </div>
     </div>
     <div id="contact">
